--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The IGOR Experience</title>
 	<link rel="stylesheet" type="text/css" href="about.css">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 		<nav>
 			<ul id="nav-container">
 				<li id="nav-1"> <a href="index.html">Home</a></li>
-				<li id="nav-2"> <a href="main.html">The Experience </a></li>
+				<li id="nav-2"> <a href="main_1.html">The Experience </a></li>
 				<li id="nav-3"><a id="nav-3" href="about.html">About</a></li>
 			</ul>
 		</nav>
@@ -34,7 +35,7 @@
 	</div>
 	<div id="footer">
 		<footer>
-			<p id="footer_p">ALL RIGHT RESERVED</p>	
+			<p id="footer_p">This webpage is under Fair Use: Copyright Disclaimer UNder Section 107 of the Copyright Act in 1976; Allowance is made for "Fair Use" for purposes such as criticism, comment, news reporting, teachin, scolarship, and research. Fair us is a use permitted by copyright statute that miht otherwise be infringing. Non-profit, educational or personal use tips the balance in favor of fair use. All rights and credit go directly to the rightful owners of the images. No copyright infringement intended.</p>	<div id="contacts"><p>Contacts:</p> <p>theigorexperience@gmail.com</p></div>
 		</footer>
 	</div>
 </body>
