--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The IGOR Experience</title>
 	<link rel="stylesheet" type="text/css" href="home.css">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 		<nav>
 			<ul id="nav-container">
 				<li id="nav-1"> <a id="nav-1" href="index.html">Home</a></li>
-				<li id="nav-2"> <a href="main.html">The Experience </a></li>
+				<li id="nav-2"> <a href="main_1.html">The Experience </a></li>
 				<li id="nav-3"><a href="about.html">About</a></li>
 			</ul>
 		</nav>
@@ -35,17 +36,17 @@
 		</div>
 		<img  id="grid_4" class="img_banner" src="images/banner_2.png">
 		<div  id="grid_3" class="desc_banner">
-			<p>The site provides a seamless listening experience by using the integrated Spotify player.</p> <p>We all know how disctracting It can be to listen to a record going back and forth between web pages. Now you'll be able to change track and navigate through the lyrics with just a click.</p><p>Discovering IGOR with this dedicated companion will take away every distraction!</p>
+			<p>Using the integrated Spotify preview, You'll be one click away from each song on the record.</p> <p>We all know how disctracting It can be to listen to a record going back and forth between web pages. Now you'll be able to change track and navigate through the lyrics with just a click.</p><p>Discovering IGOR with this dedicated companion will take away every distraction!</p>
 		</div>
 	</div>
 		<div id="calltoaction">
-			<h1 id="start"><a href="experience.html">START THE EXPERIENCE!</a></h1>
+			<a href="main_1.html"><h1 id="start">START THE EXPERIENCE!</h1></a>
 			<h1 id="or">OR</h1>
 			<h1 id="about"><a href="about.html">DISCOVER MORE ABOUT THE PROJECT</a></h1>
 		</div>
 	<div id="footer">
 		<footer>
-			<p id="footer_p">ALL RIGHT RESERVED</p>	
+			<p id="footer_p">This webpage is under Fair Use: Copyright Disclaimer UNder Section 107 of the Copyright Act in 1976; Allowance is made for "Fair Use" for purposes such as criticism, comment, news reporting, teachin, scolarship, and research. Fair us is a use permitted by copyright statute that miht otherwise be infringing. Non-profit, educational or personal use tips the balance in favor of fair use. All rights and credit go directly to the rightful owners of the images. No copyright infringement intended.</p>	<div id="contacts"><p>Contacts:</p> <p>theigorexperience@gmail.com</p></div>
 		</footer>
 	</div>
 </body>
