--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 	</div>
 
 	<div>
-		<img id="intro_img" src="images/tylerdancing.png">		
+		<img id="intro_img" alt="A New Listening Experience" src="images/tylerdancing.png">		
 	</div>
 
 	<div id="body">
-		<img  id="grid_1" class="img_banner" src="images/banner_1.png">
+		<img  id="grid_1" class="img_banner" src="images/banner_1.png" alt="Discover The Hidden Story in Tyler The Creator's IGOR">
 		<div  id="grid_2" class="desc_banner">
 			<p>IGOR is an heartwrenching love story. You'll witness the transformation of the author into the titular character through the record.</p> <p>This site offers a brand new way to discover this hidden story.</p> <p>Understanding the story and following Tyler's bars has never been this easy, due to the intoductions to each song and the lyrics powered by Genius.</p>
 		</div>
-		<img  id="grid_4" class="img_banner" src="images/banner_2.png">
+		<img  id="grid_4" class="img_banner" src="images/banner_2.png" alt="A Seamless Experience">
 		<div  id="grid_3" class="desc_banner">
 			<p>Using the integrated Spotify preview, You'll be one click away from each song on the record.</p> <p>We all know how disctracting It can be to listen to a record going back and forth between web pages. Now you'll be able to change track and navigate through the lyrics with just a click.</p><p>Discovering IGOR with this dedicated companion will take away every distraction!</p>
 		</div>
