--- a/about.html
+++ b/about.html
@@ -17,9 +17,10 @@
 		</hgroup>
 		<nav>
 			<ul id="nav-container">
-				<li id="nav-1"> <a href="index.html">Home</a></li>
+				<li id="nav-1"> <a id="nav-1" href="index.html">Home</a></li>
 				<li id="nav-2"> <a href="main_1.html">The Experience </a></li>
-				<li id="nav-3"><a id="nav-3" href="about.html">About</a></li>
+				<a href="about.html"><li id="nav-3">About</li></a>
+				<li id="nav-4"><a href="documentation.html">Documentation</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -27,7 +28,7 @@
 	<div id="body">
 	<div id="text">
 			<h1>WHAT IS THE IGOR EXPERIENCE?</h1>
-			<p>The IGOR experience is a project developed by Samuele, an italian Communication student at the University of Bologna. The goal of this project is making you experience Tyler, The Creator's 2018 record "IGOR" in a whole new way. </p> <p>The Idea of a "listening companion" for the record comes from a poor experience trying to study in depth the project, by using multiple websites. </p> <p> That's the reason why in the page, you'll also find the Spotify player for the record. So that you can enjoy a flawless listening experience.</p> <p>Don't esitate to contact us at theigorexperience@gmail.com to ask any question or give any advice!</p>
+			<p>The IGOR experience is a project developed by Samuele, an italian Communication student at the University of Bologna. The goal of this project is making you experience Tyler, The Creator's 2018 record "IGOR" in a whole new way. </p> <p>The Idea of a "listening companion" for the record comes from a poor experience trying to study in depth the project, by using multiple websites. </p> <p> That's the reason why in the page, you'll also find the Spotify player for the record. So that you can enjoy a flawless listening experience.</p> <p>Don't esitate to contact us at theigorexperience@gmail.com to ask any question or give any advice!</p> <a href="documentation.html" class="deactivated"><p >CLICK HERE FOR THE DETAILED DOCUMENTATION</p></a>
 		</div>
 	<div id="img">
 		<img id="cover" src="images/IGOR_disclaimer.png">
