--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 		</hgroup>
 		<nav>
 			<ul id="nav-container">
-				<li id="nav-1"> <a id="nav-1" href="index.html">Home</a></li>
+				<a id="nav-1" href="index.html" class="deactivated"><li id="nav-1">Home</li></a>
 				<li id="nav-2"> <a href="main_1.html">The Experience </a></li>
 				<li id="nav-3"><a href="about.html">About</a></li>
+				<li id="nav-4"><a href="documentation.html">Documentation</a></li>
 			</ul>
 		</nav>
 	</header>
