--- a/main_5.html
+++ b/main_5.html
@@ -22,6 +22,7 @@
 				<li id="nav-1"> <a id="nav-1" href="index.html">Home</a></li>
 				<li id="nav-2"> <a href="main_1.html">The Experience </a></li>
 				<li id="nav-3"><a href="about.html">About</a></li>
+				<li id="nav-4"><a href="documentation.html">Documentation</a></li>
 			</ul>
 		</nav>
 	</header>
