--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>The IGOR Experience</title>
 	<link rel="stylesheet" type="text/css" href="home.css">
 	<link rel="icon" type="image/x-icon" href="/images/favicon.png">
+	<meta name="google-site-verification" content="L4YBS2ZC_1_R00AVAHI5uosZrgtTDgqg-GSck9re4Co" />
 </head>
 
 <body>
